figue/tests/integration/snapshots/main__integration__help__help_enum_only.snap
---
source: tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
git

(Schema could not be built for this type)
