figue/tests/integration/snapshots/main__integration__help__nested_intermediate_repo_help.snap
---
source: tests/integration/help.rs
expression: "$crate :: common ::\nstrip_binary_paths(& $crate :: common :: strip_ansi(& help))"
---
<PROGRAM>

Manage repositories

USAGE:
    <PROGRAM>

COMMANDS:
    clone
            Clone a repository
    push
            Push changes
