figue/tests/integration/snapshots/main__integration__help__nested_subcommand_push_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main repo push

Push changes

USAGE:
    main repo push [OPTIONS] [REMOTE]

ARGUMENTS:
        <REMOTE>
            Remote name

OPTIONS:
    -f, --[no-]force
            Force push
