figue/tests/integration/snapshots/main__integration__help__subcommand_install_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main install

Install a package

USAGE:
    main install [OPTIONS] <PACKAGE>

ARGUMENTS:
        <PACKAGE>
            Package name to install

OPTIONS:
    -g, --[no-]global
            Install globally
    -f, --[no-]force
            Force reinstall even if already installed
