figue/tests/integration/snapshots/main__integration__help__subcommand_list_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main ls

List installed packages

USAGE:
    main ls [OPTIONS]

OPTIONS:
    -a, --[no-]all
            Show all versions
        --[no-]json
            Output as JSON
