figue/tests/integration/snapshots/main__integration__help__subcommand_remove_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main rm

Remove a package

USAGE:
    main rm [OPTIONS] <PACKAGE>

ARGUMENTS:
        <PACKAGE>
            Package name to remove

OPTIONS:
    -y, --[no-]yes
            Don't ask for confirmation
