figue/tests/integration/snapshots/main__integration__help__subcommand_root_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main

CLI with subcommands for testing subcommand-specific help

USAGE:
    main [OPTIONS] <COMMAND>

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    install
            Install a package
    rm
            Remove a package
    ls
            List installed packages
