figue/tests/integration/snapshots/main__integration__help__tuple_variant_main_help.snap
---
source: crates/figue/tests/integration/help.rs
expression: "strip_ansi_escapes :: strip_str(& help)"
---
myapp

USAGE:
    myapp [OPTIONS] <COMMAND>

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    build
            Build the project
    test
            Run tests
